# sampleworks

./: .gitignore  Cargo.toml  README.md  X2U_120_03_Junk_Foley_1.flac  i-know02.flac
.github/: FUNDING.yml
demo_samples/: Bodhran-2.flac  Bodhran-3.flac  LICENSE.txt  Shakers-2.flac  Shakers-3.flac  cg-cap-crank_20230426.flac  cg-grind-start_20230426.flac  cg-load-beans_20230426.flac  cg-load-spill_20230426.flac  i-know03.flac  im-infected09.flac  light-rail-bells.flac  light-rail-train.flac  mp-cumin-grind_20230426.flac  mp-empty-grind_20230425.flac
src/: app_data.rs  audio.rs  caching.rs  common.rs  config.rs  img.rs  main.rs  messaging.rs  metadata.rs  project.rs  sound_object.rs  toy_audio.rs  ui.rs  util.rs
src/metadata/: db.rs  sql.rs
src/ui/: browser.rs  wavethumb.rs
src/ui/thumbnail/: imp.rs  mod.rs
