[package]
name = "sampleworks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sndfile = "0.1"
# cpal = "0.15"
rodio = "0.17"
image = "0.24"
gtk4 = "0.6"
glib = "0.17"
anyhow = "1.0"
directories = "5.0"
blake3 = "1.4"
arrayvec = "0.7"
lv2-host-minimal = "0.1"
rusqlite = "0.29"
toml = "0.7"
