[package]
name = "sampleworks"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# # sndfile = "0.1"
# # cpal = "0.15"
# rodio = "0.21"
# image = "0.25"
# gtk4 = "0.9"
# glib = "0.20"
# anyhow = "1.0"
# directories = "6.0"
# configura = "1.1"
# blake3 = "1.8"
# arrayvec = "0.7"
# lv2-host-minimal = "0.1"
# rusqlite = "0.35"
# toml = "0.8"
# serde = "1.0"
# !! above deps disabled for toy implemtation branch
rodio = "0.21"
anyhow = "1.0"
rand = "0.9"
